--- a/web-client/static/oidc/sign-in-callback.html
+++ b/web-client/static/oidc/sign-in-callback.html
@@ -1,19 +1,19 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
   <title>Authenticating...</title>
 </head>
 <body>
+
 <script src="/oidc/oidc-client.min.js"></script>
 <script>
   new Oidc.UserManager({
-    userStore: new Oidc.WebStorageStateStore({ store: window.localStorage }),
-    response_mode: 'query'
+    userStore: new Oidc.WebStorageStateStore({store: window.localStorage}),
+    response_mode: 'query',
   })
     .signinRedirectCallback()
-    .then(user => {
-      console.log(user)
+    .then((user) => {
       window.location = '/'
     })
 </script>
