--- a/web-client/static/oidc/sign-in-silent-callback.html
+++ b/web-client/static/oidc/sign-in-silent-callback.html
@@ -1,10 +1,10 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Authenticating...</title>
 </head>
 <body>
+
 <script src="/oidc/oidc-client.min.js"></script>
 <script>
   new Oidc.UserManager({}).signinSilentCallback()
